--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss",
+          "node_modules/@fortawesome/fontawesome-free/css/all.min.css"],
             "scripts": []
           },
           "configurations": {
